[package]
name = "lc-serve"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.1"
confy = "2.0.0"
libp2p = { version = "0.56.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
